# solana_contract_proxy

./: Cargo.toml  README.md
src/: deploy-mainnet.fish  lib.rs
